--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "mqtt": "^5.10.3",
     "redis": "^4.7.0",
     "uuid": "^11.0.5",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "validator": "^13.12.0"
   }
 }
