--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ urgent:
     - تغيير التاريخ في الواجهة الأمامية لاستخدام التقويم الميلادي بدلاً من الهجري (تم)
     - جعل الحضور يتم تحميله من الملف إذا كان موجودًا (تم)
     - القدرة على تغيير المعلم لما سيتم حفظه والحفظ الكامل للطلاب (تم)
+    - قدرة المنظم على حذف سجل من سجلات الطلاب (تم)
 non-urgent:
     - جعل الطلاب قادرون على الدخول على النظام ومتابعة تقدمهم
     - اضافة نظام للسرد
